--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,4 +1,5 @@
 $main-background-color: #E4E4E4;
 $main-text-color: #444444;
+$secondary-text-color: #444442;
 $main-logo-color: #FC4887;
 $button-border-color: #1691C3;
