--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -2,4 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
+}
+button{
+  border: none;
+  background: none;
+  border-radius: 0.25em;
 }
