--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,5 +3,141 @@
 @import"_mixins.scss";
 
 body{
-  background-color: cornflowerblue;
+  background-color: $main-background-color;
+  font-family: "Open Sans", sans-serif;
+  color: $main-text-color;
+}
+
+.container{
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 1em;
+}
+
+.logo {
+  padding:  0 0.25em;
+  border-radius: 0.25em;
+  letter-spacing: 2px;
+  font-size: 2em;
+  font-family: "Oleo Script", sans-serif;
+  color: white;
+}
+
+header{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  @include tablet{
+    justify-content: space-between;
+  }
+  .logo{
+    display: inline-block;
+    background-color: $main-logo-color;
+  }
+
+  .menu{
+    display: none;
+    @include tablet{
+      display: flex;
+    }
+    .menu_item{
+      padding: 0.5em 1em;
+      font-weight: bold;
+      border-radius: 0.25em;
+    }
+    .menu_item_active{
+      background-color: $main-text-color;
+      color: $main-background-color;
+    }
+  }
+}
+
+.welcome{
+  background-color: white;
+  padding: 1em;
+  margin-top: 1em;
+  border-radius: 0.25em;
+  @include tablet{
+    display: flex;
+    justify-content: space-between;
+    padding: 2em;
+  }
+
+  .welcome_text{
+    text-align: center;
+    padding: 1em 2em;
+
+    @include tablet{
+      text-align: left;
+      max-width: 430px;
+    }
+
+    .title{
+      font-weight: 800;
+    }
+
+    .subtitle{
+      font-weight: 300;
+      color: $secondary-text-color;
+    }
+  }
+  .welcome_buttons{
+    display: flex;
+    flex-direction: column;
+    padding: 0.5em 0;
+    @include tablet{
+      width: 255px;
+    }
+
+
+    .button{
+      margin: 0.25em 0;
+      padding: 0.5em 0;
+      font-weight: 800;
+      @include tablet{
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        gap: 1em;
+        font-size: 1.5em;
+        padding: 0.5em 1em;
+      }
+
+    }
+    .button-primary{
+      background-color: $button-border-color;
+      color: white;
+    }
+    .button-secondary{
+      background-color: $main-background-color;
+      color: $main-text-color;
+    }
+    }
+  }
+
+.portfolio {
+    .portfolio__item {
+      background-color: white;
+      overflow: hidden;
+      border-radius: 0.25px;
+
+    .portfolio__item__thumbnail {
+      img{
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    .portfolio__item__header {
+      padding: 2em;
+      display: flex;
+    }
+
+    .portfolio__item__description {
+      // opis
+    }
+  }
 }
